fix z-index issue, move directory

--- a/.mozilla/firefox/ujjhzgsn.default-release/chrome/userChrome.css
+++ b/.mozilla/firefox/ujjhzgsn.default-release/chrome/userChrome.css
@@ -18,7 +18,7 @@ See the above repository for updates as well as full license text. */
   min-width: var(--uc-sidebar-width) !important;
   width: var(--uc-sidebar-width) !important;
   max-width: var(--uc-sidebar-width) !important;
-  z-index:1;
+  z-index: 10 !important;
 }
 
 #sidebar-box[positionend]{ direction: rtl }
